--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vite dev",
+    "dev": "build dev",
     "build": "vite build",
     "start": "next start",
     "lint": "next lint"
